# flow

./: .gitignore  CMakeLists.txt  Makefile  instruction.md  settings.json
apps/: CMakeLists.txt  main.cpp
apps/brunner/: CMakeLists.txt  IniReader.hpp  main.cpp  settings.ini
apps/charged_electrodes_check/: CMakeLists.txt  main.cpp  settings.ini
apps/demo/: CMakeLists.txt  demo.cpp
apps/evald_test/: CMakeLists.txt  main.cpp
apps/flowtest/: CMakeLists.txt  runtests.cpp
apps/perftests/: CMakeLists.txt  runtests.cpp
data/: POSCAR  after_run.xyz  выведанная информация.md
include/: app.hpp  atom.hpp  flow.hpp  grid.hpp  section.hpp  settings.hpp  sgs.hpp  tension.hpp  types.h
include/app/: app.hpp
include/atom/: atom.hpp
include/electrode/: electrode.hpp
include/field/: condenser.hpp  equal.hpp  evald.hpp  ewald_hack.hpp
include/flow/: flow.hpp
include/geometry/: geometry.hpp
include/grid/: cubicchunk.hpp  grid.hpp  lattice.hpp
include/grid/atom/: atom.hpp
include/grid/react/: puasson.hpp  react.hpp
include/params/: params.hpp
include/point/: point.hpp
include/section/: section.hpp
include/tension/: tension.hpp
include/types/: atom.hpp  reaction.hpp
src/: CMakeLists.txt  app.cpp  assertions.h  atom.cpp  electrode.cpp  flow.cpp  grid.cpp  m_pi.h  params.cpp  point.cpp  section.cpp  sgs.hpp  tension.cpp  type_atom.cpp  type_reaction.cpp
src/algo/: kmk.cpp  kmk.hpp
src/field/: basic_electrode.hpp  condenser.hpp  equal.hpp  evald.cpp  evald.hpp  ewald.cpp  ewald.hpp  ewald_hack.hpp  field.hpp  summation.cpp  summation.hpp
src/geometry/: geometry.cpp  geometry.hpp  vector.cpp  vector.hpp
src/grid/: cubicchunk.cpp  cubicchunk.hpp  grid.cpp  grid.hpp  lattice.cpp  lattice.hpp  react.cpp
src/grid/atom/: atom.hpp  type.hpp
src/grid/react/: barrier.cpp  barrier.hpp  ionic.hpp  puasson.hpp  react.cpp  react.hpp  standart.cpp  standart.hpp  tat.hpp  tat_simple.hpp
src/math/: modulo.hpp
tests/: CMakeLists.txt  testElectrode.cpp  testGridFromFile.cpp
