project(flowtests LANGUAGES CXX)

add_executable(flowtests runtests.cpp)

target_link_libraries(flowtests PRIVATE fmt::fmt flow_library)

add_compile_options(-Wmultichar)

add_test(NAME all_work COMMAND flowtests aw)
add_test(NAME test_basic_sgs COMMAND flowtests bsgs)
add_test(NAME test_vector_creation COMMAND flowtests vc)
add_test(NAME vector_add COMMAND flowtests va)
add_test(NAME geometry_create COMMAND flowtests gt)
add_test(NAME vector_cmp_check COMMAND flowtests vcc)
add_test(NAME vector_hash COMMAND flowtests vhash)
add_test(NAME geometry_to COMMAND flowtests gtto)
add_test(NAME geometry_from COMMAND flowtests gtfrom)
add_test(NAME vector_cmp COMMAND flowtests vcmp)
add_test(NAME cubic_chunk_creation COMMAND flowtests ccc)
add_test(NAME cubic_chunk_insert COMMAND flowtests cci)
add_test(NAME cubic_chunk_multy COMMAND flowtests ccm)
add_test(NAME cubic_chunk_insert_get COMMAND flowtests ccig)
add_test(NAME cubic_chunk_iterate COMMAND flowtests cciter)
add_test(NAME cubic_chunk_count COMMAND flowtests ccc1)
add_test(NAME cubic_chunk_erase COMMAND flowtests cce)
add_test(NAME atom_type_creation_and_cmp COMMAND flowtests atcr)
add_test(NAME lattice_creation_check COMMAND flowtests lcc)
add_test(NAME lattice_creation_check_incorrect_add COMMAND flowtests lccia)
add_test(NAME check_atom_create COMMAND flowtests cac)
add_test(NAME check_reaction_create COMMAND flowtests crc)
add_test(NAME check_reaction_check_atoms COMMAND flowtests crca)
add_test(NAME create_grid COMMAND flowtests cg)
add_test(NAME grid_add_Reaction COMMAND flowtests gar)
add_test(NAME grid_addLattice COMMAND flowtests gal)
add_test(NAME grid_add_Atom COMMAND flowtests gaa)
add_test(NAME grid_cnt COMMAND flowtests gc)
add_test(NAME grid_add_lattive_ex COMMAND flowtests gale)
add_test(NAME grid_clear_parallelep COMMAND flowtests gcp)
add_test(NAME grid_clear_parallelep_ex COMMAND flowtests gcpe)
add_test(NAME grid_erase COMMAND flowtests ge)
add_test(NAME grid_1m_insert_erase COMMAND flowtests g1mie)
add_test(NAME grid_save COMMAND flowtests gs)
add_test(NAME grid_save_load COMMAND flowtests gsl)
add_test(NAME grid_save_load_big COMMAND flowtests gslb)
add_test(NAME grid_radius_iterator COMMAND flowtests gri)
add_test(NAME grid_radius_iterator_simple COMMAND flowtests gris)
add_test(NAME grid_radius_iter_filtered COMMAND flowtests grif)
add_test(NAME grid_radius_iterator_ex COMMAND flowtests grie)
add_test(NAME grid_cyclic_set COMMAND flowtests gcs)
add_test(NAME grid_cyclic_set_get COMMAND flowtests gcsg)
add_test(NAME math_modulo_test_double COMMAND flowtests mmtd)
add_test(NAME grid_radius_iterator_cyclic COMMAND flowtests gric)
add_test(NAME grid_field_equal COMMAND flowtests gfe)
add_test(NAME grid_field_condenser COMMAND flowtests gfc)
add_test(NAME grid_ewald_hack_simple_demo COMMAND flowtests gehsd)
add_test(NAME react_puasson COMMAND flowtests rp)
#add_test(NAME test_must_crush COMMAND flowtests mc)