project(flowtests LANGUAGES CXX)

add_executable(flowtests runtests.cpp)

target_link_libraries(flowtests PRIVATE fmt::fmt flow_library)

add_compile_options(-Wmultichar)

add_test(NAME all_work COMMAND flowtests all_work)
add_test(NAME test_basic_sgs COMMAND flowtests test_basic_sgs)
add_test(NAME test_vector_creation COMMAND flowtests test_vector_creation)
add_test(NAME vector_add COMMAND flowtests vector_add)
add_test(NAME geometry_create COMMAND flowtests geometry_create)
add_test(NAME vector_cmp_check COMMAND flowtests vector_cmp_check)
add_test(NAME vector_hash COMMAND flowtests vector_hash)
add_test(NAME geometry_to COMMAND flowtests geometry_to)
add_test(NAME geometry_from COMMAND flowtests geometry_from)
add_test(NAME vector_cmp COMMAND flowtests vector_cmp)
add_test(NAME cubic_chunk_creation COMMAND flowtests cubic_chunk_creation)
add_test(NAME cubic_chunk_insert COMMAND flowtests cubic_chunk_insert)
add_test(NAME cubic_chunk_multy COMMAND flowtests cubic_chunk_multy)
add_test(NAME cubic_chunk_insert_get COMMAND flowtests cubic_chunk_insert_get)
add_test(NAME cubic_chunk_iterate COMMAND flowtests cubic_chunk_iterate)
add_test(NAME cubic_chunk_count COMMAND flowtests cubic_chunk_count)
add_test(NAME cubic_chunk_erase COMMAND flowtests cubic_chunk_erase)
add_test(NAME atom_type_creation_and_cmp COMMAND flowtests atom_type_creation_and_cmp)
add_test(NAME lattice_creation_check COMMAND flowtests lattice_creation_check)
add_test(NAME lattice_creation_check_incorrect_add COMMAND flowtests lattice_creation_check_incorrect_add)
add_test(NAME check_atom_create COMMAND flowtests check_atom_create)
add_test(NAME check_reaction_create COMMAND flowtests check_reaction_create)
add_test(NAME check_reaction_check_atoms COMMAND flowtests check_reaction_check_atoms)
add_test(NAME create_grid COMMAND flowtests create_grid)
add_test(NAME grid_add_Reaction COMMAND flowtests grid_add_Reaction)
add_test(NAME grid_addLattice COMMAND flowtests grid_addLattice)
add_test(NAME grid_add_Atom COMMAND flowtests grid_add_Atom)
add_test(NAME grid_cnt COMMAND flowtests grid_cnt)
add_test(NAME grid_add_lattive_ex COMMAND flowtests grid_add_lattive_ex)
add_test(NAME grid_clear_parallelep COMMAND flowtests grid_clear_parallelep)
add_test(NAME grid_clear_parallelep_ex COMMAND flowtests grid_clear_parallelep_ex)
add_test(NAME grid_erase COMMAND flowtests grid_erase)
add_test(NAME grid_1m_insert_erase COMMAND flowtests grid_1m_insert_erase)
add_test(NAME grid_save COMMAND flowtests grid_save)
add_test(NAME grid_save_load COMMAND flowtests grid_save_load)
add_test(NAME grid_save_load_big COMMAND flowtests grid_save_load_big)
add_test(NAME grid_radius_iterator COMMAND flowtests grid_radius_iterator)
add_test(NAME grid_radius_iterator_simple COMMAND flowtests grid_radius_iterator_simple)
add_test(NAME grid_radius_iter_filtered COMMAND flowtests grid_radius_iter_filtered)
add_test(NAME grid_radius_iterator_ex COMMAND flowtests grid_radius_iterator_ex)
add_test(NAME grid_cyclic_set COMMAND flowtests grid_cyclic_set)
add_test(NAME grid_cyclic_set_get COMMAND flowtests grid_cyclic_set_get)
add_test(NAME math_modulo_test_double COMMAND flowtests math_modulo_test_double)
add_test(NAME grid_radius_iterator_cyclic COMMAND flowtests grid_radius_iterator_cyclic)
add_test(NAME grid_field_equal COMMAND flowtests grid_field_equal)
add_test(NAME grid_field_condenser COMMAND flowtests grid_field_condenser)
add_test(NAME grid_ewald_hack_simple_demo COMMAND flowtests grid_ewald_hack_simple_demo)
add_test(NAME grid_radius_iterator_exchecks COMMAND flowtests grid_radius_iterator_exchecks)
add_test(NAME grid_radius_iterator_horizontal COMMAND flowtests grid_radius_iterator_horizontal)
add_test(NAME grid_radius_iterator_horizontal_z COMMAND flowtests grid_radius_iterator_horizontal_z)
add_test(NAME react_standart COMMAND flowtests react_standart)
add_test(NAME grid_check_min_dist COMMAND flowtests grid_check_min_dist)
add_test(NAME check_reaction_chances COMMAND flowtests check_reaction_chances)
add_test(NAME check_save_load COMMAND flowtests check_save_load)
add_test(NAME grid_iteration_check COMMAND flowtests grid_iteration_check)
add_test(NAME check_kmk COMMAND flowtests check_kmk)
add_test(NAME check_kmk_several COMMAND flowtests check_kmk_several)
add_test(NAME check_kmk_several_ex COMMAND flowtests check_kmk_several_ex)


#add_test(NAME test_must_crush COMMAND flowtests mc)